# aiogram-limit

./: LICENSE.md  README.md  changelog  pyproject.toml
aiogram_limit/: schema.py  type.py
aiogram_limit/limit/: __init__.py  limits.py
aiogram_limit/middleware/: __init__.py  middleware_limit.py
aiogram_limit/storage/: __init__.py  abstract_storage.py  memory.py  redis.py
aiorate/: __init__.py  enums.py  exception.py  filter.py  rate_limit.py
aiorate/storage/: __init__.py  abstract_storage.py  memory_storage.py  redis_storage.py
