[project]
name = "aiotools"
version = "1.0.0"
description = "Libriary with usefull utils for aiogram"
authors = [
    {name = "Vlad_shayzi1",email = "tecnomega@mail.ru"}
]
readme = "README.md"
license = "LICENSE.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "redis (>=6.2.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
